--- a/biome.json
+++ b/biome.json
@@ -17,6 +17,16 @@
   "linter": {
     "enabled": true,
     "rules": {
+      "nursery": {
+        "useSortedClasses": {
+          "level": "on",
+          "fix": "safe",
+          "options": {
+            "attributes": ["classList", "class"],
+            "functions": ["clsx", "cva", "tw", "tw.*"]
+          }
+        }
+      },
       "recommended": true,
       "suspicious": {
         "noUnknownAtRules": "off"
